# xxdb

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml
examples/http/: debug.ipynb  xxdb.toml
examples/rest/: debug.ipynb  xxdb.toml
examples/rest/data/: test.meta.xxdb
tests/engine/: capped_array_test.py  disk_meta_test.py  hashtable_test.py  schema_test.py  sqlite_test.py
xxdb/: __init__.py  cli.py
xxdb/engine/: __init__.py  capped_array.py  config.py  configs.py  db.py  disk.py  hashtable.py  meta.py  metrics.py  page.py  schema.py  typing.py
xxdb/engine/buffer/: __init__.py  buffer_pool_manager.py  event.py  replacer.py
xxdb/engine/disk/: __init__.py  blockio.py  disk.py  multifile.py  page.py  singlefile.py
xxdb/engine/index/: __init__.py  hashtable.py  index.py  sqlite.py
xxdb/http/: app.py  cli.py  config.py  database.py  rest_client.py  rest_server.py  server.py  ws_client.py  ws_server.py
xxdb/http/pb/: gen_py.bat  message_pb2.py
xxdb/http/pb/proto/: message.proto
xxdb/rest/client/: __init__.py  main.py
xxdb/rest/server/: __init__.py  cli.py  main.py
xxdb/rest/server/app/: __init__.py  api.py  config.py  database.py
xxdb/utils/: __init__.py  event.py  event_emitter.py
