[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xxdb"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pydantic >=1.10.0, <2",
]

[tool.hatch.version]
path = "xxdb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/xxdb",
]

[tool.hatch.build.targets.wheel]
packages = ["xxdb"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 120
skip-string-normalization = true
