[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xxdb"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pydantic >=1.10.0, <2",
]

[project.optional-dependencies]
rest = [
    "fastapi",
    "typer",
    "httpx",  # client requires
    "tenacity",  # client requires
]

[project.scripts]
xxdb-rest-server = "xxdb.rest.server.cli:cli"

[tool.hatch.version]
path = "xxdb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/xxdb",
]

[tool.hatch.build.targets.wheel]
packages = ["xxdb"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120
