[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xxdb"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pydantic >=1.10.0, <2",
    "pb_encoding == 0.2.0",
    "toml",
    "prometheus-client",
]

[project.optional-dependencies]
server = [
    "typer",
    "protobuf",  # http requires
    "websockets",  # ws server requires
    "starlette",  # server requires
    "uvicorn",  # server requires
    "httpx",  # rest client requires
    "tenacity",  # rest client requires
    "aiohttp",  # ws client requires
]

[project.scripts]
xxdb = "xxdb.cli:cli"

[tool.hatch.version]
path = "xxdb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/xxdb",
]

[tool.hatch.build.targets.wheel]
packages = ["xxdb"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 120
skip-string-normalization = true
extend-exclude = '''
(
    .*_pb2.py
)
'''

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "W",
]
exclude = [
    "*_pb2.py",
]
